--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.5.0",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.0.3",
     "classnames": "2.2.6",
     "date-fns": "2.10.0",
     "gray-matter": "4.0.2",
     "next": "latest",
+    "next-compose-plugins": "^2.2.1",
+    "next-mdx-enhanced": "^5.0.0",
     "next-mdx-remote": "^1.0.0",
+    "prismjs": "^1.23.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "remark": "11.0.2",
